fix text overflow

--- a/style.css
+++ b/style.css
@@ -140,9 +140,9 @@ header {
         max-width: 62.8rem;
         max-height: 31.9rem;
 
-        white-space: nowrap;
+        //white-space: nowrap;
         overflow: hidden;
-        text-overflow: ellipsis;
+        //text-overflow: ellipsis;
 
         text-align: left;
     }
